Add ability to add stats for a player
