# server/pkg/handlers/spreadsheets.go
@@ -17,6 +17,8 @@ func RegisterSpreadsheetsRoutes(router *gin.RouterGroup) {
 	router.GET("/:id", getSpreadsheetByID)
 	router.PUT("/:id", updateSpreadsheet)
 	router.DELETE("/:id", deleteSpreadsheet)
+	router.POST("/:id/player", createPlayer)
+	router.POST("/:id/player/:player/action", createPlayerAction)
 }
 
 // GetAllSpreadsheets retrieves all spreadsheets.
@@ -59,6 +61,10 @@ func createSpreadsheet(c *gin.Context) {
 	if newSpreadsheet.Name == "" {
 		c.JSON(http.StatusUnprocessableEntity, models.HTTPError{Code: http.StatusUnprocessableEntity, Message: "Please provide a name for the Spreadsheet"})
 		return
+	}
+
+	if newSpreadsheet.Players == nil {
+		newSpreadsheet.Players = make([]*models.Player, 0)
 	}
 
 	dbSpreadsheet, err := database.Insert(c.Request.Context(), newSpreadsheet)
@@ -125,8 +131,8 @@ func updateSpreadsheet(c *gin.Context) {
 		fetchedSpreadsheet.Name = updatedSpreadsheet.Name
 	}
 
-	if updatedSpreadsheet.Data != nil {
-		fetchedSpreadsheet.Data = updatedSpreadsheet.Data
+	if updatedSpreadsheet.Players != nil {
+		fetchedSpreadsheet.Players = updatedSpreadsheet.Players
 	}
 
 	res, err := database.Update(c.Request.Context(), fetchedSpreadsheet)
@@ -169,4 +175,92 @@ func deleteSpreadsheet(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, models.HTTPError{Code: http.StatusOK, Message: "Successfully Deleted"})
+}
+
+// CreatePlayerAction creates a new player action.
+// @Summary Create a new spreadsheet
+// @Description create a new spreadsheet with the provided details
+// @Tags spreadsheets
+// @Accept json
+// @Produce json
+// @Param id path string true "Spreadsheet ID"
+// @Param spreadsheet body models.Player true "Spreadsheet Info"
+// @Success 201 {object} models.Spreadsheet "Successfully created"
+// @Failure 400 {object} models.HTTPError "Bad request - invalid JSON"
+// @Failure 422 {object} models.HTTPError "Bad request - missing element"
+// @Failure 500 {object} models.HTTPError "Internal server error"
+// @Router /spreadsheets/{id}/player [post]
+func createPlayer(c *gin.Context) {
+	var newSpreadsheet *models.Spreadsheet
+	if err := c.ShouldBindJSON(&newSpreadsheet); err != nil {
+		c.JSON(http.StatusBadRequest, models.HTTPError{Code: http.StatusBadRequest, Message: err.Error()})
+		return
+	}
+
+	if newSpreadsheet.Name == "" {
+		c.JSON(http.StatusUnprocessableEntity, models.HTTPError{Code: http.StatusUnprocessableEntity, Message: "Please provide a name for the Spreadsheet"})
+		return
+	}
+
+	if newSpreadsheet.Players == nil {
+		newSpreadsheet.Players = make([]*models.Player, 0)
+	}
+
+	dbSpreadsheet, err := database.Insert(c.Request.Context(), newSpreadsheet)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, models.HTTPError{Code: http.StatusInternalServerError, Message: err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusCreated, dbSpreadsheet)
+}
+
+// CreatePlayerAction creates a new player action.
+// @Summary Create a new player action
+// @Description create a new action for the player
+// @Tags spreadsheets
+// @Accept json
+// @Produce json
+// @Param id path string true "Spreadsheet ID"
+// @Param player path string true "Player name"
+// @Param spreadsheet body models.PlayerAction true "Action Info"
+// @Success 201 {object} models.Player "Successfully created"
+// @Failure 400 {object} models.HTTPError "Bad request - invalid JSON"
+// @Failure 404 {object} models.HTTPError "Failed to find player"
+// @Failure 422 {object} models.HTTPError "Bad request - missing element"
+// @Failure 500 {object} models.HTTPError "Internal server error"
+// @Router /spreadsheets/{id}/player/{player}/action [post]
+func createPlayerAction(c *gin.Context) {
+	hexID := c.Param("id")
+	var newAction models.PlayerAction
+	if err := c.ShouldBindJSON(&newAction); err != nil {
+		c.JSON(http.StatusBadRequest, models.HTTPError{Code: http.StatusBadRequest, Message: err.Error()})
+		return
+	}
+
+	if newAction.Type == "" {
+		c.JSON(http.StatusUnprocessableEntity, models.HTTPError{Code: http.StatusUnprocessableEntity, Message: "Please provide an action type"})
+		return
+	}
+
+	dbResult, err := database.Find(c.Request.Context(), &models.Spreadsheet{ID: utils.ConvertToMongoID(hexID)})
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, models.HTTPError{Code: http.StatusInternalServerError, Message: err.Error()})
+		return
+	}
+
+	spreadsheet := dbResult.(*models.Spreadsheet)
+	player := spreadsheet.FindPlayer(c.Param("player"))
+	if player == nil {
+		c.JSON(http.StatusNotFound, models.HTTPError{Code: http.StatusNotFound, Message: "Failed to find player with that name"})
+	}
+	player.AddAction(newAction)
+
+	_, err = database.Update(c.Request.Context(), spreadsheet)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, models.HTTPError{Code: http.StatusInternalServerError, Message: err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusCreated, player)
 }
